# backend/src/modules/users/users.routes.ts
@@ -1,7 +1,7 @@
 import { Router } from "express";
 import { authenticate } from "../../common/middlewares/auth.middleware.js";
 import { validateBody } from "../../common/middlewares/validate.middleware.js";
-import { updateUserSchema } from "../../common/validators/user.validators.js";
+import { updateUserSchema, changePasswordSchema } from "../../common/validators/user.validators.js";
 import * as usersController from "./users.controller.js";
 
 const router = Router();
@@ -14,5 +14,11 @@ router.patch(
   validateBody(updateUserSchema),
   usersController.updateProfileController,
 );
+router.post(
+  "/me/change-password",
+  validateBody(changePasswordSchema),
+  usersController.changePasswordController,
+);
 
 export { router as usersRouter };
+
